--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
     "clsx": "^2.1.0",
     "lucide-react": "^0.321.0",
     "next": "14.1.0",
+    "next-themes": "^0.2.1",
     "react": "^18",
     "react-dom": "^18",
+    "sonner": "^1.4.0",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animate": "^1.0.7",
     "use-debounce": "^10.0.0",
